--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<mysql-connector.version>8.0.15</mysql-connector.version>
 		<mongodb.version>3.4.1</mongodb.version>
 		<netty.version>4.1.16.Final</netty.version>
-		
+		<!-- 项目自身版本 -->
 		<project.version>0.0.1-SNAPSHOT</project.version>
 	</properties>
 
@@ -46,7 +46,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<!-- <version>3.0.2</version> -->
 				<configuration>
 					<archive>
 						<addMavenDescriptor>false</addMavenDescriptor>
@@ -57,7 +56,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<!-- <version>3.0.1</version> -->
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -67,36 +65,19 @@
 					</execution>
 				</executions>
 			</plugin>
-		<!-- 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.4</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<!-- <version>3.0.2</version> -->
 				<configuration>
-					<encoding>UTF-8</encoding>
+					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<!-- <version>2.16</version> -->
 				<configuration>
 					<forkMode>once</forkMode>
-					<argLine>-Dfile.encoding=UTF-8</argLine>
+					<argLine>${argLine}</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
