--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
 		<!-- 项目自身版本 -->
 		<project.version>0.0.1-SNAPSHOT</project.version>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>https://maven.aliyun.com/repository/public</url>
+		</repository>
+	</repositories>
+
 	<build>
 		<plugins>
 			<plugin>
