完善线程池处理，以及对自匹配属性值，增加默认值处理

--- a/dao/src/main/resources/dao_messages.properties
+++ b/dao/src/main/resources/dao_messages.properties
@@ -10,3 +10,6 @@ DaoBaseConstants.CONNECTION_GET_BUSY_WAIT_TIME=10
 DaoBaseConstants.CONNECTION_GET_BUSY_MAX_TRY_TIMES=100
 # web工具常量 add 2017-04-06
 DaoBaseConstants.SQL_MAX_LENGTH=500
+
+# dao连接线程池中用key add xwj 2020-10-27
+DaoBaseConstants.TL_KEY=DAO_CON
