--- a/web/src/main/resources/web_message.properties
+++ b/web/src/main/resources/web_message.properties
@@ -2,6 +2,10 @@
 WebBaseConstants.INIT_LINK_PAGE_DTD=dtd/LinkPageDTD.dtd
 # 已经登录到系统的用户，作为存储在Session的信息的key名称
 WebBaseConstants.SESSION_KEY_USER=la
+
+# web用户sess线程池中用key add xwj 2020-10-27
+WebBaseConstants.TL_KEY=WEB_CS
+
 # 请求信息中所产生的问题数据集合<br />
 # 在request中出去的非null内容一定是Map结构<br />
 WebBaseConstants.REQUEST_KEY_ERROR_BACK=err_bak
