配置文件处理完善，一些格式调整

--- a/dao/src/main/resources/dao_messages.properties
+++ b/dao/src/main/resources/dao_messages.properties
@@ -13,3 +13,6 @@ DaoBaseConstants.SQL_MAX_LENGTH=500
 
 # dao连接线程池中用key add xwj 2020-10-27
 DaoBaseConstants.TL_KEY=DAO_CON
+
+# dao管理配置文件路径及命名 add xwj 2020-12-04
+DaoBaseConstants.MG_CONF_PATH=dao_mg_conf.properties
