调整fastjson到fastjson2；web部分，增加加密传输，应针对C/S模式；

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,9 +11,13 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
+		</dependency> -->
+		<dependency>
+			<groupId>com.alibaba.fastjson2</groupId>
+			<artifactId>fastjson2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>dtdparser</groupId>
