--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,25 @@
 
 	<properties>
 		<argLine>-Dfile.encoding=UTF-8</argLine>
-		<jdk.version>11</jdk.version>
+		<jdk.version>21</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<servlet.version>3.1.0</servlet.version>
 		<servlet.jsp.version>2.3.1</servlet.jsp.version>
-		<tomcat.version>8.0.41</tomcat.version>
-		<apache.commons.version>1.4</apache.commons.version>
-		<apache.codec.version>1.15</apache.codec.version><!--2022-10-15  -->
-		<fastjson.version>1.2.83</fastjson.version><!--2022-10-15  -->
+		<tomcat.version>9.0.80</tomcat.version>
+		<apache.commons.version>1.5</apache.commons.version><!-- 2024-02-07 -->
+		<apache.codec.version>1.16.0</apache.codec.version><!-- 2024-02-07 -->
+		<!-- <fastjson.version>1.2.83</fastjson.version> --><!--2022-10-15 -->
+		<fastjson2.version>2.0.50</fastjson2.version><!--2024-05-27 -->
 		<dtdparser.version>1.21</dtdparser.version>
-		<log4j2.version>2.19.0</log4j2.version><!--2022-10-15  -->
-		<slf4j.version>1.7.36</slf4j.version><!--2022-10-15  -->
-		<mysql-connector.version>8.0.30</mysql-connector.version><!--2022-10-15  -->
-		<mongodb.version>3.12.11</mongodb.version><!--2022-10-15  -->
-		<netty.version>4.1.82.Final</netty.version><!--2022-10-15  -->
+		<log4j2.version>2.22.1</log4j2.version><!-- 2024-02-07 -->
+		<!-- <slf4j.version>1.7.36</slf4j.version> --><!--2022-10-15 -->
+		<slf4j.version>2.0.12</slf4j.version><!-- 2024-02-07 -->
+		<mysql-connector.version>8.3.0</mysql-connector.version><!--2024-02-07 -->
+		<!-- <mongodb.version>3.12.11</mongodb.version> --><!--2022-10-15 -->
+		<mongodb.version>3.12.14</mongodb.version><!--2024-02-07 -->
+		<!-- <mongodb.version>4.11.1</mongodb.version> --><!--2024-02-07 -->
+		<!-- <netty.version>4.1.82.Final</netty.version> --><!--2022-10-15 -->
+		<netty.version>4.1.106.Final</netty.version><!-- 2024-02-07 -->
 		<!-- 项目自身版本 -->
 		<project.version>0.0.1-SNAPSHOT</project.version>
 	</properties>
@@ -42,7 +47,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<!-- <version>3.8.1</version> -->
+				<version>3.12.1</version><!-- 2024-02-07 -->
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
@@ -53,7 +59,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.0</version>
+				<!-- <version>3.0.0</version> -->
+				<version>3.3.0</version><!-- 2024-02-07 -->
 				<configuration>
 					<archive>
 						<addMavenDescriptor>false</addMavenDescriptor>
@@ -64,7 +71,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.2.1</version>
+				<!-- <version>3.2.1</version> -->
+				<version>3.3.0</version><!-- 2024-02-07 -->
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -77,7 +85,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.1.0</version>
+				<!-- <version>3.1.0</version> -->
+				<version>3.3.1</version><!-- 2024-02-07 -->
 				<configuration>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
@@ -85,7 +94,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<!-- <version>2.22.2</version> -->
+				<version>3.2.5</version><!-- 2024-02-07 -->
 				<configuration>
 					<forkMode>once</forkMode>
 					<argLine>${argLine}</argLine>
@@ -112,7 +122,7 @@
 		</repository> <snapshotRepository> <id>nexus-snapshots</id> <name>Nexus Snapshot 
 		Repository</name> <url>http://127.0.0.1:8080/nexus/content/repositories/snapshots/</url> 
 		</snapshotRepository> </distributionManagement> -->
-	<distributionManagement>
+	<!-- <distributionManagement>
 		<repository>
 			<id>rdc-releases</id>
 			<url>https://repo.rdc.aliyun.com/repository/134985-release-5BE6C2/</url>
@@ -121,7 +131,7 @@
 			<id>rdc-snapshots</id>
 			<url>https://repo.rdc.aliyun.com/repository/134985-snapshot-wqpVCQ/</url>
 		</snapshotRepository>
-	</distributionManagement>
+	</distributionManagement> -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -158,10 +168,15 @@
 				<artifactId>commons-codec</artifactId>
 				<version>${apache.codec.version}</version>
 			</dependency>
-			<dependency>
+			<!-- <dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>${fastjson.version}</version>
+			</dependency> -->
+			<dependency>
+				<groupId>com.alibaba.fastjson2</groupId>
+				<artifactId>fastjson2</artifactId>
+				<version>${fastjson2.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>dtdparser</groupId>
@@ -184,8 +199,10 @@
 				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>mysql</groupId>
-				<artifactId>mysql-connector-java</artifactId>
+				<!-- <groupId>mysql</groupId> -->
+				<!-- <artifactId>mysql-connector-java</artifactId> -->
+				<groupId>com.mysql</groupId>
+				<artifactId>mysql-connector-j</artifactId>
 				<version>${mysql-connector.version}</version>
 			</dependency>
 			<dependency>
@@ -196,6 +213,8 @@
 			<dependency>
 				<groupId>org.mongodb</groupId>
 				<artifactId>mongo-java-driver</artifactId>
+				<!-- <groupId>org.mongodb</groupId> -->
+				<!-- <artifactId>mongodb-driver-sync</artifactId> -->
 				<version>${mongodb.version}</version>
 			</dependency>
 			<dependency>
